@@ -1,4 +1,8 @@
 NEXT VERSION
+  - Fix Tseng ET3000/ET4000 emulation bug where CGA graphics modes
+    were garbled. The main VGA emulation no longer uses M_CGA2/M_CGA4
+    and the ET4000 emulation needs to behave the same to fix the
+    graphics modes. (joncampbell123).
   - Some extra code in shell processing was preventing drive change commands
     if the last character was a backslash i.e. "a:\" instead of "a:".
     Fixed. (joncampbell123).
